Import of MARCEL/Test-Class-GetoptControl-1.100860 from CPAN.
gitpan-cpan-distribution: Test-Class-GetoptControl
gitpan-cpan-version:      1.100860
gitpan-cpan-path:         MARCEL/Test-Class-GetoptControl-1.100860.tar.gz
gitpan-cpan-author:       MARCEL
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 NAME
-    Test::Class::GetoptControl - command-line control of test class
+    Test::Class::GetoptControl - Command-line control of test class
     execution
+
+VERSION
+    version 1.100860
 
 SYNOPSIS
         package MyApp;
@@ -19,6 +22,19 @@ SYNOPSIS
 DESCRIPTION
     When inheriting from this class, your application gets the ability to
     control the execution of test classes using command-line options.
+
+METHODS
+  runtests
+    Calls "get_classes()" to determine which test classes to run and in
+    which order, then runs them.
+
+  get_classes
+    Asks Test::Class for information on all registered test classes, then
+    filters and sorts them by the criteria set in the command-line options.
+
+  GETOPT
+    Defines the specific command-line options for this class; see
+    Getopt::Inherited.
 
 COMMAND-LINE OPTIONS
     "--include"
@@ -46,47 +62,34 @@ COMMAND-LINE OPTIONS
 
         In any case, a note specifying the sort order is printed.
 
-METHODS
-    "runtests"
-        Calls "get_classes()" to determine which test classes to run and in
-        which order, then runs them.
-
-    "get_classes"
-        Asks Test::Class for information on all registered test classes,
-        then filters and sorts them by the criteria set in the command-line
-        options.
-
-    "GETOPT"
-        Defines the specific command-line options for this class; see
-        Getopt::Inherited.
+INSTALLATION
+    See perlmodinstall for information and options on installing Perl
+    modules.
 
 BUGS AND LIMITATIONS
     No bugs have been reported.
 
     Please report any bugs or feature requests through the web interface at
-    <http://rt.cpan.org>.
-
-INSTALLATION
-    See perlmodinstall for information and options on installing Perl
-    modules.
+    <http://rt.cpan.org/Public/Dist/Display.html?Name=Test-Class-GetoptContr
+    ol>.
 
 AVAILABILITY
     The latest version of this module is available from the Comprehensive
     Perl Archive Network (CPAN). Visit <http://www.perl.com/CPAN/> to find a
-    CPAN site near you. Or see
+    CPAN site near you, or see
     <http://search.cpan.org/dist/Test-Class-GetoptControl/>.
 
     The development version lives at
-    <http://github.com/hanekomu/test-class-getoptcontrol/>. Instead of
+    <http://github.com/hanekomu/Test-Class-GetoptControl/>. Instead of
     sending patches, please fork this project using the standard git and
     github infrastructure.
 
-AUTHORS
-    Marcel Grünauer, "<marcel@cpan.org>"
+AUTHOR
+      Marcel Gruenauer <marcel@cpan.org>
 
 COPYRIGHT AND LICENSE
-    Copyright 2009 by Marcel Grünauer
+    This software is copyright (c) 2009 by Marcel Gruenauer.
 
-    This library is free software; you can redistribute it and/or modify it
-    under the same terms as Perl itself.
+    This is free software; you can redistribute it and/or modify it under
+    the same terms as the Perl 5 programming language system itself.
 
