--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,10 @@
+
 This is the Perl distribution Test-Class-GetoptControl.
 
 ## Installation
 
-Test-Class-GetoptControl installation is straightforward. If your CPAN shell is
-set up, you should just be able to do
+Test-Class-GetoptControl installation is straightforward.
+If your CPAN shell is set up, you should just be able to do
 
     % cpan Test::Class::GetoptControl
 
@@ -18,10 +19,9 @@ Then install it:
 
 ## Documentation
 
-Test-Class-GetoptControl documentation is available as in POD. So you can do:
+Test-Class-GetoptControl documentation is available as in POD.
+So you can do:
 
     % perldoc Test::Class::GetoptControl
 
-to read the documentation online with your favorite pager.
-
-Marcel Gruenauer
+to read the documentation with your favorite pager.
